syntax = "proto2";

package libp2pcrypto.pb;

option go_package = "chainmaker.org/chainmaker-go/common/helper/libp2pcrypto/pb";

enum KeyType {
	RSA = 0;
	Ed25519 = 1;
	Secp256k1 = 2;
	ECDSA = 3;
	SM2 = 4;
}

message PublicKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}

message PrivateKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}
